add runtime configuration

--- a/06_advance_state.ipynb
+++ b/06_advance_state.ipynb
@@ -209,9 +209,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fdc6028",
+   "metadata": {},
+   "source": [
+    "### Add runtime configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "697db055",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.graph import StateGraph, START, END\n",
+    "from langchain_core.runnables.config import RunnableConfig\n",
+    "from langchain.schema import SystemMessage, HumanMessage\n",
+    "\n",
+    "\n",
+    "def call_model(state: OverallState, config: RunnableConfig):\n",
+    "    language = config[\"configurable\"].get(\"language\", \"English\")\n",
+    "    system_message_content = \"Respond in {}\".format(language)\n",
+    "    system_message = SystemMessage(content=system_message_content)\n",
+    "    messages = [system_message, HumanMessage(content=state[\"question\"])]\n",
+    "    response = model.invoke(messages)\n",
+    "    return {\"answer\": response}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ebf874e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow = StateGraph(ChatMessages)\n",
+    "\n",
+    "workflow.add_edge(START, \"agent\")\n",
+    "workflow.add_node(\"agent\", call_model)\n",
+    "workflow.add_edge(\"agent\", END)\n",
+    "\n",
+    "graph = workflow.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c6784b47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'question': \"What's the highest mountain in the world?\",\n",
+       " 'answer': AIMessage(content='পৃথিবীর সর্বোচ্চ পর্বত হল মাউন্ট এভারেস্ট। এটি ৮,৮৪৮ মিটার উঁচু।', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 84, 'prompt_tokens': 24, 'total_tokens': 108, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-C0WF9ImydAZxsqm7Ajx4Gh0S1lKvs', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--b71b9906-5e78-4a69-b4bd-14dbbf210e11-0', usage_metadata={'input_tokens': 24, 'output_tokens': 84, 'total_tokens': 108, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config = {\"configurable\": {\"language\": \"bangla\"}}\n",
+    "graph.invoke({\"question\": \"What's the highest mountain in the world?\"}, config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6d870c10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'question': \"What's the highest mountain in the world?\",\n",
+       " 'answer': AIMessage(content='The highest mountain in the world is Mount Everest, which is located in the Himalayas on the border between Nepal and China.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 25, 'prompt_tokens': 23, 'total_tokens': 48, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-C0WFbl8Hi09jgVpwqvxsQsLizlVKd', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--b631e022-4e58-45a9-ae07-4364738bc456-0', usage_metadata={'input_tokens': 23, 'output_tokens': 25, 'total_tokens': 48, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config = {\"configurable\": {\"language\": \"english\"}}\n",
+    "graph.invoke({\"question\": \"What's the highest mountain in the world?\"}, config=config)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "697db055",
+   "id": "458d9526",
    "metadata": {},
    "outputs": [],
    "source": []
